--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'/>
+    <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Rikki's Portfolio</title>
     <link rel='stylesheet' href='index.css'/>
   </head>
 
   <body>
+    <div class='page-container'>
     <div class='page'>
 
     <h1>Welcome to Rikki's Portfolio</h1>
@@ -18,9 +21,8 @@
       <li class='list-orientation' style="border-right:none"><a class='block-style' href="contact.asp">Contact</a></li>
     </ul>
 
-    <hr/>
-
-    <h2>About Me</h2>
+    <div class='container'>
+    <div class='about'>About Me
     <p>
       <ul>
         <li>I am a CS student at BYU</li>
@@ -28,10 +30,9 @@
         <li>I am 23 years old</li>
       </ul>
     </p>
+    </div>
 
-    <hr/>
-
-    <h2>Projects</h2>
+    <div class='projects'>Projects
     <p>
       <ul>
         <li>Created a 3D maze array with C++</li>
@@ -39,10 +40,9 @@
         <li>Made a recursive tree map with stacks and decks</li>
       </ul>
     </p>
+    </div>
 
-    <hr/>
-
-    <h2>Experience</h2>
+    <div class='experience'>Experience
 
     <p>
       <ol>
@@ -52,14 +52,18 @@
       </ol>
     </p>
 
-    <hr/>
+    </div>
 
-    <h2>Contact Info</h2>
+    <div class='contact'>Contact Info
     <p>
         <a id='button-1' class='button' href='https://github.com/choir1997'>My Github</a>
         <a id='button-2' class='button' href='https://www.linkedin.com/in/rikki-choi-b3a29aa4/'>
           My linked-in page</a>
     </p>
+
+    </div>
   </div>
+  </div>
+</div>
   </body>
 </html>
